# esp32-modular-iot-firmware

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.old
.claude/: settings.local.json
BLE GUI/: app.py  tempCodeRunnerFile.py
BLE GUI/tabs/: connect_tab.py  sensor_tab.py
GUI/: ble_gui.py
Project/: CMakeLists.txt  partitions.csv  sdkconfig
Project/BLE GUI/: ble_gui.py
Project/BLE GUI/tabs/: chart_tab.py  connect_tab.py  sensor_tab.py
Project/common/app_errors/: CMakeLists.txt  i2c_error.c
Project/common/app_errors/include/: i2c_error.h
Project/common/app_types/: CMakeLists.txt  ble_types.c  sensor_types.c
Project/common/app_types/include/: ble_types.h  sensor_types.h
Project/config/: CMakeLists.txt  core_mqtt_config.h
Project/dashboard/: app.py  config.py
Project/driver/i2c_bus/: CMakeLists.txt
Project/driver/i2c_bus/include/: i2c_manager.h
Project/driver/sensor_drivers/aht20/: CMakeLists.txt  aht20.c  aht20.h
Project/driver/sensor_drivers/bh1750/: CMakeLists.txt  bh1750.h  driver_bh1750fvi.c  driver_bh1750fvi_interface.c  driver_bh1750fvi_interface.h
Project/driver/sensor_drivers/bme280/: CMakeLists.txt  bme280.c  driver_bme280.h  driver_bme280_interface.c
Project/driver/sensor_drivers/bmp280/: CMakeLists.txt  bmp280.h  driver_bmp280.c  driver_bmp280.h  driver_bmp280_interface.h
Project/driver/sensor_drivers/bno055/: CMakeLists.txt  bno055.c
Project/driver/sensor_drivers/ina226/: CMakeLists.txt  driver_ina226.c  ina226.h
Project/driver/sensor_drivers/sensor_driver_interface_manager/: sensor_driver_interface_manager.c
Project/driver/sensor_drivers/sensors_manager/: CMakeLists.txt  sensors_manager.c  sensors_manager.h
Project/main/: CMakeLists.txt  Project.c
Project/modules/BLE/: CMakeLists.txt  ble_manager.c
Project/modules/BLE/include/: ble_manager.h
Project/modules/BLE/profiles/ota_profile/: ota_profile.c  ota_profile.h
Project/modules/BLE/profiles/prov_profile/: prov_profile.c
Project/modules/BLE/profiles/sensor_profile/: sensor_profile.c
Project/modules/MQTT/: mqtt_task.c
Project/modules/Wifi/: CMakeLists.txt  wifi_task.c
Project/modules/Wifi/include/: wifi_task.h
Project/modules/ota/: CMakeLists.txt  ota_service.c
Project/modules/ota/include/: ota_agent.h  ota_http_client.h  ota_service.h
Project/modules/storage/: CMakeLists.txt
Project/modules/storage/include/: storage_service.h
components/00_core/app_errors/include/: sensor_error.h
components/00_core/app_types/: CMakeLists.txt  app_types.h  rtos_config.h  sensor_types.c
components/00_core/app_types/include/: app_types.h  sensor_types.h
components/01_hal/i2c_bus/: CMakeLists.txt  i2c_manager.c  i2c_manager.h  i2c_scan.c
components/01_hal/sensor_drivers/aht20/: CMakeLists.txt  aht20.c  aht20.h  driver_aht20.c  driver_aht20.h  driver_aht20_interface.c  driver_aht20_interface.h
components/01_hal/sensor_drivers/bh1750/: CMakeLists.txt  driver_bh1750fvi.c  driver_bh1750fvi.h  driver_bh1750fvi_interface.c  driver_bh1750fvi_interface.h
components/01_hal/sensor_drivers/bme280/: CMakeLists.txt  bme280.h  driver_bme280.c  driver_bme280_interface.c  driver_bme280_interface.h
components/01_hal/sensor_drivers/bmp280/: CMakeLists.txt  bmp280.c  bmp280.h  driver_bmp280_interface.c  driver_bmp280_interface.h
components/01_hal/sensor_drivers/bno055/: CMakeLists.txt  bno055.c  bno055.h  driver_bno055.c  driver_bno055.h  driver_bno055_interface.c  driver_bno055_interface.h
components/01_hal/sensor_drivers/ina226/: CMakeLists.txt  driver_ina226.c  driver_ina226.h  (+2 more)
components/01_hal/sensor_drivers/sensors_manager/: CMakeLists.txt  sensors_manager.c  sensors_manager.h
components/02_services/mqtt_service/: CMakeLists.txt  core_mqtt_config.h  mqtt_task.c  mqtt_task.h
components/02_services/mqtt_service/certs/: device.crt  device.key
components/02_services/mqtt_service/source/interface/: transport_interface.h
components/02_services/wifi_service/: CMakeLists.txt  wifi_config.h  wifi_task.c  wifi_task.h
components/03_managers/sensor_manager/: CMakeLists.txt  aht20.c  bh1750.c  bme280.c  bmp280.c  bno055.c  ina226.c  sensor_manager.c
components/03_managers/sensor_manager/include/: aht20.h  bh1750.h  bme280.h  bmp280.h  bno055.h  ina226.h  sensor_manager.h
components/04_app/app_core/: Project.c
components/app_core/: CMakeLists.txt  app_version.h
components/ble/: CMakeLists.txt  ble_manager.c
components/ota/: CMakeLists.txt  ota_agent.c  ota_http_client.c  ota_service.c
components/sensors/: CMakeLists.txt  sensor_manager.c
components/sensors/drivers/ds3231/: driver_ds3231.c  driver_ds3231.h  driver_ds3231_interface.c  driver_ds3231_interface.h
components/sensors/include/: sensor_manager.h
components/storage/: CMakeLists.txt  storage_service.c
components/wifi/: CMakeLists.txt  wifi_service.c
components/wifi/include/: wifi_service.h
esp32_iot_devices/drivers/i2c/: i2c_manager.c  i2c_manager.h  i2c_scan.c
esp32_iot_devices/i2c/: I2c_scan.h  i2c_manager.c  i2c_manager.h
esp32_iot_devices/sensors/bh1750/: CMakeLists.txt  bh1750.c  bh1750.h  driver_bh1750fvi.h  driver_bh1750fvi_interface.c
esp32_iot_devices/sensors/bme280/: CMakeLists.txt  driver_bme280_interface.c  driver_bme280_interface.h
esp32_iot_devices/sensors/bmp280/: CMakeLists.txt  bmp280.c  bmp280.h  driver_bmp280.c  driver_bmp280_interface.c  driver_bmp280_interface.h
esp32_iot_devices/sensors/bno055/: bno055.c
esp32_iot_devices/sensors/ina226/: driver_ina226_interface.c  ina226.c  ina226.h
main/: CMakeLists.txt  I2C_scan.h  bme280.c  bme280.h  bmp280.c  bmp280.h  driver_bh1750fvi.h  driver_bh1750fvi_interface_template.c  driver_bme280.c  driver_bme280_interface_template.c  driver_bmp280_interface_template.c  idf_component.yml  main.c
test/sensors/aht20_test/: CMakeLists.txt
test/sensors/bh1750_test/: CMakeLists.txt  driver_bh1750fvi_read_test.c
test/sensors/bmp280_test/: CMakeLists.txt
test/sensors/ina226_test/: CMakeLists.txt  driver_ina226_alert_test.c  driver_ina226_read_test.c  driver_ina226_register_test.c
(+23 files in other folders)
